src/components/nav.component.css
@media all {
  :local(.wrapper) {
    display: -webkit-box;           /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box;              /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox;           /* TWEENER - IE 10 */
    display: -webkit-flex;          /* NEW - Chrome */
    display: flex;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */

    -webkit-flex-direction: row;    /* Safari 6.1+ */
    flex-direction: row;            /* NEW, Spec - Opera 12.1, Firefox 20+ */

    width: 100%;
    height: 100%;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    -webkit-box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.25);
    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.25);
  }

  :local(.wrapper .left) {
    display: -webkit-box;           /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box;              /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox;           /* TWEENER - IE 10 */
    display: -webkit-flex;          /* NEW - Chrome */
    display: flex;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */

    -webkit-flex-direction: row;    /* Safari 6.1+ */
    flex-direction: row;            /* NEW, Spec - Opera 12.1, Firefox 20+ */

    text-align: left;
    margin: auto;
    cursor: pointer;
    padding-left: 24px;
  }
  :local(.wrapper .left:hover) {
    color: rgba(107, 170, 119, 1);
  }
  :local(.wrapper .left .title) {
    font-size: large;
    padding-top: 4px;
    text-align: center;
  }
  :local(.wrapper .left .logo:after) {
    content: url(~static/images/logo-white-32x32.png);
  }
  :local(.wrapper .left:hover .logo:after) {
    content: url(~static/images/logo-green-32x32.png);
  }

  :local(.wrapper .center) {
    -webkit-flex-grow: 4;           /* NEW - Chrome */
    flex-grow: 4;                   /* NEW, Spec - Opera 12.1, Firefox 20+ */

    text-align: center;
    margin: auto;
    cursor: pointer;
    padding: 0 6px;
  }

  :local(.wrapper .center:hover) {
    color: rgba(107, 170, 119, 1);
  }

  :local(.wrapper .right) {
    display: -webkit-box;           /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box;              /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox;           /* TWEENER - IE 10 */
    display: -webkit-flex;          /* NEW - Chrome */
    display: flex;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
    min-width: 30%;
    max-width: 30%;
    text-align: center;
    cursor: pointer;
    background-color: rgba(107, 170, 119, 1);
    margin: 0 0 4px 0;
    border-bottom-left-radius: 8px;
    padding: 0 8px;
  }
  :local(.wrapper .right .login) {
    width: 100%;
    text-align: center;
    margin: auto;
    cursor: pointer;
  }
  :local(.wrapper .right .login:hover) {
    color: rgba(94, 78, 81, 1);
  }

  :local(.location) {
    width: 100%;
    padding: 6px;
    border-radius: 2px;
    color: rgba(255, 255, 255, 1);
    cursor: text;
    overflow: hidden;
  }
  :local(.location:hover) {
    color: rgba(107, 170, 119, 1);
  }

  :local(.edit) {
    width: 100%;
    padding: 6px;
    border-radius: 2px;
    border: 1px solid rgba(94, 78, 81, 1);
    color: rgba(0, 0, 0, 1);
  }
  :local(.edit:focus) {
    outline: none;
  }
}


@media screen and (max-device-width: 1024px) {
  :local(.wrapper .title) {
    display: none;
  }
  :local(.wrapper .right) {
    max-width: 100%;
  }
  :local(.location) {
    font-size: small;
  }
  :local(.wrapper .left) {
    -webkit-flex-grow: 1;           /* NEW - Chrome */
    flex-grow: 1;                   /* NEW, Spec - Opera 12.1, Firefox 20+ */

    padding-left: 12px;
  }
  :local(.wrapper .right .login) {
    font-size: small;
  }
}

@media screen and (max-device-aspect-ratio: 1/1) {
  :local(.wrapper .title) {
    display: none;
  }
  :local(.wrapper .right) {
    max-width: 100%;
  }
  :local(.location) {
    font-size: small;
  }
  :local(.wrapper .left) {
    -webkit-flex-grow: 1;           /* NEW - Chrome */
    flex-grow: 1;                   /* NEW, Spec - Opera 12.1, Firefox 20+ */

    padding-left: 12px;
  }
  :local(.wrapper .right .login) {
    font-size: small;
  }
}

